add new website from server na

--- a/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
+++ b/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1653,18 +1653,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kamen-rider-black-sun" title="Kamen Rider Black Sun">
+          <a class="list-top-movie-link" href="/phim-moi/friend-request" title="Friend Request">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kamen-rider-black-sun-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/friend-request-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kamen Rider Black Sun
+             Friend Request
             </span>
             <span class="list-top-movie-item-en">
-             Kamen Rider Black Sun
+             Friend Request
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1675,18 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cua-me" title="Hành trình của mẹ">
+          <a class="list-top-movie-link" href="/phim-moi/quyen-luc-troi-day" title="Quyền Lực Trỗi Dậy">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cua-me-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quyen-luc-troi-day-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành trình của mẹ
+             Quyền Lực Trỗi Dậy
             </span>
             <span class="list-top-movie-item-en">
-             Otherhood
+             Days of Power
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1697,21 +1697,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-khoa-hoc-roi-vao-luoi-tinh-thu-giai-ma-nao" title="Nhà Khoa Học Rơi Vào Lưới Tình, Thử Giải Mã Nào">
+          <a class="list-top-movie-link" href="/phim-moi/da-loi-dai" title="Đả Lôi Đài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-khoa-hoc-roi-vao-luoi-tinh-thu-giai-ma-nao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/da-loi-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà Khoa Học Rơi Vào Lưới Tình, Thử Giải Mã Nào
+             Đả Lôi Đài
             </span>
             <span class="list-top-movie-item-en">
-             理系が恋に落ちたので证明してみた。
+             Tiger and Dragon Reloaded
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1719,18 +1719,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-thai-quy" title="Bào Thai Quỷ">
+          <a class="list-top-movie-link" href="/phim-moi/the-den" title="The Den">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-thai-quy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bào Thai Quỷ
+             The Den
             </span>
             <span class="list-top-movie-item-en">
-             Malicious
+             The Den
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1741,18 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thay-doi-toi" title="Thay đổi tôi">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-knight-3-doc-lap" title="Thám Tử Knight 3 Độc Lập">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thay-doi-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-knight-3-doc-lap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thay đổi tôi
+             Thám Tử Knight 3 Độc Lập
             </span>
             <span class="list-top-movie-item-en">
-             Alter Me
+             Detective Knight: Independence
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
