add new website from server na

--- a/xem-phim-bo/tai-kien-quan-nhu-co/index.html
+++ b/xem-phim-bo/tai-kien-quan-nhu-co/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1707,18 +1707,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thay-ma-nhiem-xa" title="Thây Ma Nhiễm Xạ">
+          <a class="list-top-movie-link" href="/phim-moi/tam-long-nghia-hiep" title="Tấm Lòng Nghĩa Hiệp">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thay-ma-nhiem-xa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-long-nghia-hiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thây Ma Nhiễm Xạ
+             Tấm Lòng Nghĩa Hiệp
             </span>
             <span class="list-top-movie-item-en">
-             Zombie 108
+             The Imperial Guards Bloody For Blood
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ky-bang-ha-2-bang-tan" title="Kỷ Băng Hà 2: Băng Tan">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-bang-ha-2-bang-tan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kỷ Băng Hà 2: Băng Tan
+            </span>
+            <span class="list-top-movie-item-en">
+             Ice Age: The Meltdown
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1729,21 +1751,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngay-chuot-chui" title="Ngày Chuột Chũi">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-xuan-tren-yen-ngua" title="Thanh Xuân Trên Yên Ngựa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-chuot-chui-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-xuan-tren-yen-ngua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngày Chuột Chũi
+             Thanh Xuân Trên Yên Ngựa
             </span>
             <span class="list-top-movie-item-en">
-             Groundhog Day
+             Gunjou no Fanfare
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1751,65 +1773,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-doi-linh-hon-cua-rong" title="Người Dơi: Linh Hồn Của Rồng">
+          <a class="list-top-movie-link" href="/phim-moi/suc-nong-mua-he" title="Sức nóng mùa hè">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-doi-linh-hon-cua-rong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-nong-mua-he-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Dơi: Linh Hồn Của Rồng
+             Sức nóng mùa hè
             </span>
             <span class="list-top-movie-item-en">
-             Batman: Soul Of The Dragon
+             Summer Heat
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/buc-anh-ma-am-2" title="Bức Ảnh Ma Ám 2">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buc-anh-ma-am-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bức Ảnh Ma Ám 2
+            </span>
+            <span class="list-top-movie-item-en">
+             The Haunted Graduation Photo 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thoat-khoi-twin-flames" title="Thoát khỏi Twin Flames">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thoat-khoi-twin-flames-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thoát khỏi Twin Flames
-            </span>
-            <span class="list-top-movie-item-en">
-             Escaping Twin Flames
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/moi-quan-he-phuc-tap" title="Mối Quan Hệ Phức Tạp">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-quan-he-phuc-tap-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mối Quan Hệ Phức Tạp
-            </span>
-            <span class="list-top-movie-item-en">
-             Lagaslas
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
