--- a/xem-phim-bo/thuong-lan-quyet/index.html
+++ b/xem-phim-bo/thuong-lan-quyet/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1695,18 +1695,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bay-nam-ngua-ngay" title="Bảy Năm Ngứa Ngáy">
+          <a class="list-top-movie-link" href="/phim-moi/tan-trang-su-tong-the-kiet" title="Tân Trạng Sư Tống Thế Kiệt">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-nam-ngua-ngay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-trang-su-tong-the-kiet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bảy Năm Ngứa Ngáy
+             Tân Trạng Sư Tống Thế Kiệt
             </span>
             <span class="list-top-movie-item-en">
-             The Seven Year Itch
+             Justice My Foot
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1717,40 +1717,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/binh-chu-ky-hon" title="Binh Chủ Kỳ Hồn">
+          <a class="list-top-movie-link" href="/phim-moi/vuon-sao-bang" title="Vườn sao băng">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/binh-chu-ky-hon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuon-sao-bang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Binh Chủ Kỳ Hồn
+             Vườn sao băng
             </span>
             <span class="list-top-movie-item-en">
-             The Soul of Soldier Master
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dead-before-dawn" title="Dead Before Dawn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dead-before-dawn-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Dead Before Dawn
-            </span>
-            <span class="list-top-movie-item-en">
-             Dead Before Dawn
+             Boys Over Flowers
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1761,18 +1739,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bill-burr-truc-tiep-tai-red-rocks" title="Bill Burr: Trực tiếp tại Red Rocks">
+          <a class="list-top-movie-link" href="/phim-moi/vu-mat-tich-tai-ayotzinapa" title="Vụ mất tích tại Ayotzinapa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bill-burr-truc-tiep-tai-red-rocks-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-mat-tich-tai-ayotzinapa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bill Burr: Trực tiếp tại Red Rocks
+             Vụ mất tích tại Ayotzinapa
             </span>
             <span class="list-top-movie-item-en">
-             Bill Burr: Live at Red Rocks
+             The 43
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1783,21 +1761,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/splice" title="Splice">
+          <a class="list-top-movie-link" href="/phim-moi/tham-vong" title="Tham Vọng">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/splice-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-vong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Splice
+             Tham Vọng
             </span>
             <span class="list-top-movie-item-en">
-             Splice
+             Agency
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/rambo-3-gac-kiem-khong-thanh" title="Rambo 3: Gác Kiếm Không Thành">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rambo-3-gac-kiem-khong-thanh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Rambo 3: Gác Kiếm Không Thành
+            </span>
+            <span class="list-top-movie-item-en">
+             Rambo III
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
